# cura-odephysicsplugin

./: CMakeLists.txt  ODEPhysicsPlugin.py  README.md  RigidBodyDecorator.py
src/: Helpers.py  ODEPhysicsPlugin.py  ObjectPacker.py  OutsideInPlacementStrategy.py  RigidBodyDecorator.py  TranslateTool.py  __init__.py
